--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -118,8 +118,9 @@ a {
         text-decoration: underline;
     }
 
-
-
+#wrapper {
+    width: 100%;
+}
 
 
 /* ==========================================================================
