--- a/EveFirstMate/Views/Shared/_Layout.cshtml
+++ b/EveFirstMate/Views/Shared/_Layout.cshtml
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>EveFirstMate | @ViewBag.Title</title>
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body>
-        @RenderBody()
+        <div id="wrapper">
+            @RenderBody()
+        </div>
         @Scripts.Render("~/bundles/main")
         @Scripts.Render("~/bundles/knockout")
         @RenderSection("scripts", required: false)
