--- a/EveFirstMate/Views/Home/Index.cshtml
+++ b/EveFirstMate/Views/Home/Index.cshtml
@@ -1,29 +1,59 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model EveFirstMate.ViewModels.EveViewModel
+
+@{
+    ViewBag.Title = "Home";
 }
 
-<h3>We suggest the following:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
-    </li>
+@helper ShowTree(ICollection<EveFirstMate.Models.invMarketGroup> groups) {
+    <ul>
+        @foreach(var group in groups) 
+        {
+        <li>
+            @if (group.invMarketGroups1.Any()) 
+            {
+                if (group.iconID.HasValue)
+                {
+                    
+                }
+                <a href="#">@group.marketGroupName</a>
+                <ul>
+                    @ShowTree(group.invMarketGroups1)
+                </ul>
+            }
+            else
+            {
+                <a href="#" data-group-leaf="true">@group.marketGroupName</a>
+                @ShowLeaf(group.invTypes)
+            }
+        </li>
+        }
+    </ul>
+}
 
-    <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
-    </li>
+@helper ShowLeaf(ICollection<EveFirstMate.Models.invType> items) {
+    <ul>
+        @foreach (var item in items)
+        {
+            <li>@item.typeName</li>
+        }
+    </ul>
+}
 
-    <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
-    </li>
-</ol>
+<section id="items">
+    <menu id="marketGroups">
+        <ul>
+        @foreach (var group in Model.marketGroups)
+        {
+            <li>
+                <a href="#">@group.marketGroupName</a>
+                @ShowTree(group.invMarketGroups1)
+            </li>
+        }
+        </ul>
+    </menu>
+</section>
+<section id="fitting">
+    <div>
+        <span>This is where the ship goes.</span>
+    </div>
+</section>
