First pass at tree view implementation
The market tree view uses data-node-state and data-leaf-state to open
and close nodes on the tree. The leaf nodes are technically not true
leaves in that they have children themselves, but they are the last
nodes that 'open' and based on the behavior in the EVE Market, only one
of these can be open at one time, so this has been implemented the same
way.

--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -156,28 +156,37 @@ a {
     overflow-x: hidden;
 }
 
-#marketGroups a {
-    display: block;
-    background-color: rgba(2, 2, 2, 1.0);
-    color: rgba(189, 189, 189, 1.0);
-    text-decoration: none;
-}
+    #marketGroups a {
+        display: block;
+        background-color: rgba(2, 2, 2, 1.0);
+        color: rgba(189, 189, 189, 1.0);
+        text-decoration: none;
+    }
 
-#marketGroups a:hover {
-    text-decoration: none;
-}
+    #marketGroups a:hover {
+        text-decoration: none;
+    }
 
-#marketGroups ul {
-    list-style: none;
-    margin: 0;
-    padding: 0 0 0 1em;
-}
+    #marketGroups li {
+        background-color: rgba(2, 2, 2, 1.0);
+        color: rgba(189, 189, 189, 1.0);
+        text-decoration: none;
+        cursor: pointer;
+    }
 
-    #marketGroups li > ul {
+    #marketGroups ul {
+        list-style: none;
+        margin: 0;
+        padding: 0 0 0 1em;
+    }
+
+    #marketGroups li[data-node-state="closed"] > ul,
+    #marketGroups li[data-leaf-state="closed"] > ul {
         display: none;
     }
 
-    #marketGroups li:hover > ul {
+    #marketGroups li[data-node-state="open"] > ul,
+    #marketGroups li[data-leaf-state="open"] > ul {
         display: block;
     }
 
