Linking up item selection to the API
Selecting an item now gets the item from the DB and holds onto it in a
cache as an object in JS. It currently also displays the item name and
description, but this will be expanded to show relevant info about the
item.

--- a/EveFirstMate/Views/Home/Index.cshtml
+++ b/EveFirstMate/Views/Home/Index.cshtml
@@ -8,9 +8,11 @@
     <menu id="marketGroups">
         @Html.Partial("_MarketGroups", Model.marketGroups)
     </menu>
-    <aside id="itemInfo" style="display: none;">
-        <h3 data-bind="text: typeName"></h3>
-        <p data-bind="text: description"></p>
+    <aside id="itemInfo">
+        <div data-bind="with: selectedItem">
+            <h3 data-bind="text: typeName"></h3>
+            <p data-bind="text: description"></p>
+        </div>
     </aside>
 </section>
 <section id="fitting">
