--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -160,7 +160,7 @@ a {
     #marketGroups ul {
         list-style: none;
         margin: 0;
-        padding: 0 0 0 1em;
+        padding: 0;
         position: relative;
     }
 
