--- a/EveFirstMate/Views/Home/_MarketGroups.cshtml
+++ b/EveFirstMate/Views/Home/_MarketGroups.cshtml
@@ -1,36 +1,43 @@
 ﻿@model List<EveFirstMate.Models.invMarketGroup>
 
-@helper ShowTree(ICollection<EveFirstMate.Models.invMarketGroup> groups) {
+@helper ShowTree(ICollection<EveFirstMate.Models.invMarketGroup> groups, int depth)
+{
+    var indent = depth.ToString() + "em";
+    depth++;
+    
     <ul>
         @foreach(var group in groups) 
         {
             if (group.invMarketGroups1.Any()) 
             {
-                <li data-node-state="closed">
+                <li data-node-state="closed" style="text-indent: @indent">
                     @group.marketGroupName
                 </li>
-                <li class="closed">
-                    @ShowTree(group.invMarketGroups1)
+                <li class="closed" style="text-indent: @indent">
+                    @ShowTree(group.invMarketGroups1, depth)
                 </li>
             }
             else
             {
-                <li data-group-leaf="true" data-leaf-state="closed">
+                <li data-group-leaf="true" data-leaf-state="closed" style="text-indent: @indent">
                     @group.marketGroupName
                 </li>
-                <li class="closed">
-                    @ShowLeaf(group.invTypes)
+                <li class="closed" style="text-indent: @indent">
+                    @ShowLeaf(group.invTypes, depth)
                 </li>
             }
         }
     </ul>
 }
 
-@helper ShowLeaf(ICollection<EveFirstMate.Models.invType> items) {
+@helper ShowLeaf(ICollection<EveFirstMate.Models.invType> items, int depth)
+{
+    var indent = depth.ToString() + "em";
+    
     <ul class="items">
         @foreach (var item in items)
         {
-            <li data-item-typeid="@item.typeID">@item.typeName</li>
+            <li data-item-typeid="@item.typeID" style="text-indent: @indent">@item.typeName</li>
         }
     </ul>
 }
@@ -42,7 +49,7 @@
             @group.marketGroupName
         </li>
         <li class="closed">
-            @ShowTree(group.invMarketGroups1)
+            @ShowTree(group.invMarketGroups1, 1)
         </li>
     }
 </ul>
