--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -111,6 +111,69 @@ a {
         text-decoration: underline;
     }
 
+noscript {
+    background-color: #ff0000;
+    color: #f3f3f3;
+    display: block;
+    width: 100%;
+    height: 70px;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* ==========================================================================
+   Site styles
+   ========================================================================== */
+
+#warning {
+    display: none;
+    visibility: hidden;
+}
+
+#warning a {
+    display: none;
+}
+
+#warning p {
+    display: none;
+}
+
+    #warning p a {
+        display: none;
+    }
+
+.ie #warning {
+    display: block;
+    visibility: visible;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    height: 100px;
+    background-color: #ff4444;
+    color: #f3f3f3;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0;
+    z-index: 100;
+}
+
+.ie #warning p {
+    display: block;
+    line-height: 24px;
+    padding: 0 20px;
+}
+
+.ie #warning p a {
+    display: inline;
+    color: #cfcfff;
+}
+
 #wrapper {
     width: 90%;
     margin: 0 auto;
@@ -135,6 +198,10 @@ a {
         -moz-box-sizing: border-box;
         box-sizing: border-box;
     }
+
+.no-js #wrapper {
+    padding-top: 70px;
+}
 
 #items {
     width: 30%;
