--- a/EveFirstMate/Views/Shared/_Layout.cshtml
+++ b/EveFirstMate/Views/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html>
+<!--[if lt IE 9]> <html class="no-js ie"> <![endif]-->
+<!--[if !IE]><!-->
 <html lang="en-us" class="no-js">
+    <!--<![endif]-->
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,6 +12,19 @@
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body>
+        <noscript>
+            <p>Javascript is disabled. This site requires Javascript to be enabled.</p>
+        </noscript>
+        <div id="warning">
+            <p>
+                Attention: You are using an older version of Internet Explorer, which is not supported.
+                Please upgrade your browser or 
+                <a href="https://www.google.com/chrome">use</a>
+                <a href="http://www.mozilla.org">another</a>
+                <a href="http://www.opera.com/">browser</a>
+                in order to access all functionality of the site.
+            </p>
+        </div>
         <div id="wrapper">
             @RenderBody()
         </div>
