Changed Market to load on demand
Changed to lazy load the Market via knockout.
A lot of markup was changed for this and needs to be more fully tested.
Items not being loaded in yet, those will need to be loaded on demand as
well.
Also changed Entity Framework to turn off lazy loading in order to
serialize some of the entities that are being sent as JSON.

--- a/EveFirstMate/Views/Home/_MarketGroups.cshtml
+++ b/EveFirstMate/Views/Home/_MarketGroups.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<EveFirstMate.Models.invMarketGroup>
 
-@helper ShowTree(ICollection<EveFirstMate.Models.invMarketGroup> groups, int depth)
+@*@helper ShowTree(ICollection<EveFirstMate.Models.invMarketGroup> groups, int depth)
 {
     var indent = depth.ToString() + "em";
     depth++;
@@ -40,9 +40,29 @@
             <li data-item-typeid="@item.typeID" style="text-indent: @indent">@item.typeName</li>
         }
     </ul>
-}
+}*@
 
-<ul>
+<script type="text/html" id="treeLeafList">
+    <li data-bind="text: typeName, style: { textIndent: $parents.length + 'em' }"></li>
+</script>
+
+<script type="text/html" id="treeNodeList">
+    <li data-bind="click: toggleGroup, clickBubble: false, style: { textIndent: $parents.length + 'em' }">
+        <span data-bind="text: marketGroupName"></span>
+        <!--ko if: isOpen-->
+            <!--ko ifnot: hasTypes-->
+                <ul data-bind="template: { name: 'treeNodeList', foreach: childMarketGroups }"></ul>
+            <!--/ko-->
+            <!--ko if: hasTypes-->
+                <ul class="items" data-bind="template: { name: 'treeLeafList', foreach: invTypes }"></ul>
+            <!--/ko-->
+        <!--/ko-->
+    </li>
+</script>
+
+<ul data-bind="template: { name: 'treeNodeList', foreach: marketGroups }"></ul>
+
+@*<ul>
     @foreach (var group in Model)
     {
         <li data-node-state="closed">
@@ -52,4 +72,4 @@
             @ShowTree(group.invMarketGroups1, 1)
         </li>
     }
-</ul>
+</ul>*@
