--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -236,11 +236,16 @@ noscript {
         color: rgba(189, 189, 189, 1.0);
         text-decoration: none;
         cursor: pointer;
-        padding: 0.25em 0;
+        /*padding: 0.25em 0;*/
         position: relative;
     }
 
-    #marketGroups li:hover {
+        #marketGroups li span {
+            display: block;
+            padding: 0.25em 0;
+        }
+
+    #marketGroups span:hover {
         background-color: rgba(78, 79, 80, 1.0);
         color: rgba(189, 189, 189, 1.0);
         text-decoration: none;
@@ -264,7 +269,7 @@ noscript {
         cursor: pointer;
     }
 
-    #marketGroups ul.items li:hover {
+    #marketGroups ul.items li span:hover {
         background-color: rgba(78, 79, 80, 1.0);
         color: rgba(189, 189, 189, 1.0);
         text-decoration: none;
@@ -275,7 +280,7 @@ noscript {
         background-color: rgba(78, 79, 80, 1.0);
     }
 
-    #marketGroups ul.items li.selected:hover {
+    #marketGroups ul.items li.selected span:hover {
         background-color: rgba(131, 131, 131, 1.0);
         color: rgba(220, 220, 220, 1.0);
     }
