Now pulling invTypes in as well
Closing any other open leaf node is not implemented yet and will need to
be done at the top level (MarketModel)

--- a/EveFirstMate/Views/Home/Index.cshtml
+++ b/EveFirstMate/Views/Home/Index.cshtml
@@ -1,12 +1,10 @@
-﻿@model EveFirstMate.ViewModels.EveViewModel
-
-@{
+﻿@{
     ViewBag.Title = "Home";
 }
 
 <section id="items">
     <menu id="marketGroups">
-        @Html.Partial("_MarketGroups", Model.marketGroups)
+        @Html.Partial("_MarketGroups")
     </menu>
     <aside id="itemInfo">
         <div data-bind="with: selectedItem">
