added knockout 3.0.0 beta

--- a/EveFirstMate/Views/Shared/_Layout.cshtml
+++ b/EveFirstMate/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 window.EVEFIRSTMATE = EVEFIRSTMATE;
             }());
         </script>
-        @Scripts.Render("~/bundles/main")
+        @Scripts.Render("~/bundles/beta")
         @RenderSection("scripts", required: false)
     </body>
 </html>
