--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -242,7 +242,11 @@ noscript {
 
         #marketGroups li span {
             display: block;
-            padding: 0.25em 0;
+            padding: 0.25em 0; /*.25em 0.25em 1em;*/
+        }
+
+        #marketGroups li ul {
+            /*padding-left: 1em;*/
         }
 
     #marketGroups span:hover {
