applying formatting for type descriptions
Rather ghetto way of formatting the invType description column, but it
works and the ko custom binding textBlock gets the job done on the front
end.

--- a/EveFirstMate/Views/Home/Index.cshtml
+++ b/EveFirstMate/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <aside id="itemInfo">
         <div data-bind="with: selectedItem">
             <h3 data-bind="text: typeName"></h3>
-            <p data-bind="text: description"></p>
+            <p data-bind="textBlock: description"></p>
         </div>
     </aside>
 </section>
