upgrade to knockoutjs 3.0.0
also upgraded jquery and normalized the naming convention used by the js
files to be consistent.

--- a/EveFirstMate/Views/Shared/_Layout.cshtml
+++ b/EveFirstMate/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 window.EVEFIRSTMATE = EVEFIRSTMATE;
             }());
         </script>
-        @Scripts.Render("~/bundles/beta")
+        @Scripts.Render("~/bundles/main")
         @RenderSection("scripts", required: false)
     </body>
 </html>
