--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -18,7 +18,7 @@ textarea {
 body {
     font-size: 62.5%;
     line-height: 1.4em;
-    padding: 40px 0 0;
+    padding: 10px 0 0;
     width: 100%;
     height: 100%;
     background-color: rgba(35, 35, 35, 1.0);
@@ -193,12 +193,6 @@ noscript {
         clear: both;
     }
 
-    #wrapper * {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-    }
-
 .no-js #wrapper {
     padding-top: 70px;
 }
@@ -222,6 +216,7 @@ noscript {
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
+    background-color: rgba(2, 2, 2, 1.0);
 }
 
     #marketGroups ul {
@@ -236,17 +231,12 @@ noscript {
         color: rgba(189, 189, 189, 1.0);
         text-decoration: none;
         cursor: pointer;
-        /*padding: 0.25em 0;*/
         position: relative;
     }
 
         #marketGroups li span {
             display: block;
-            padding: 0.25em 0; /*.25em 0.25em 1em;*/
-        }
-
-        #marketGroups li ul {
-            /*padding-left: 1em;*/
+            padding: 0.25em 0;
         }
 
     #marketGroups span:hover {
@@ -291,4 +281,16 @@ noscript {
 
     #marketGroups li.open:hover {
         background-color: rgba(2, 2, 2, 1.0);
+    }
+
+#itemInfo {
+    height: 340px;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin-top: 20px;
+}
+
+    #itemInfo h3 {
+        margin-top: 0;
     }
