--- a/EveFirstMate/Content/main.css
+++ b/EveFirstMate/Content/main.css
@@ -237,6 +237,10 @@ noscript {
         #marketGroups li span {
             display: block;
             padding: 0.25em 0;
+            transition-delay: 0s;
+            transition-duration: 0.2s;
+            transition-property: background-color;
+            transition-timing-function: ease;
         }
 
     #marketGroups span:hover {
